--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -13,8 +13,7 @@
 #   Latest themes (may require updating): https://sourcethemes.com/academic/themes/
 #   Browse built-in themes in `themes/academic/data/themes/`
 #   Browse user installed themes in `data/themes/`
-#theme = "minimal"
-theme = "1950s"
+theme = "minimal"
 #theme = "rose"
 #theme = "mr robot"
 
